Fix: Text wrapping issue on About Page.

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -38,6 +38,16 @@ body {
     width: max-content;
 }
 
+.shiny-title-wrappable {
+    font-family: variables.$main-font;
+    background: variables.$darker-gradient;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    text-align: center;
+}
+
 .center-title {
     text-align: center;
 }
